--- a/templates/index.html
+++ b/templates/index.html
@@ -5,7 +5,8 @@
 
     </head>
     <body>
-        <p><h3> Welcome Teacher~~ </h3></p>
+        <h2>歡迎老師</h2>
+            <p>您已經登入囉</p>
     </body>
 
 </html>
